// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StreetNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="street_name"
      >
        Ulica
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="testId"
        label="Ulica"
        name="street_name"
        placeholder="Ulica"
        value="#$Street Name"
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<StreetNameField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="testId"
  label="Ulica"
  name="street_name"
  placeholder="Ulica"
  value=""
/>
`;

exports[`<StreetNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="street_name"
      >
        Street
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="testId"
        label="Street"
        name="street_name"
        placeholder="Ulica"
        value=""
      />
    </div>
  </form>
</div>
`;
